# ReferenceRunRank

./: .env  .gitignore  .pre-commit-config.yaml  README.md  get_oms_data.py  omsapi.py  pyproject.toml
configs/: refrank_config.json  refrank_config_example.json  rr_config.json  runreg_logic.json
data/: candidates.parquet  ls_df.parquet  omsrundata_2018.parquet  run_df.parquet  targets.parquet
jsons/: AllRunsRefRuns_Mar5_2024.json  Express-Collisions-2022_pixel-strip-track-good.json  ch_refruns.json  json_DCSONLY_2017.txt  json_DCSONLY_2018.txt  json_GOLDEN_RRRdev.json  json_TRK_PromptReco_2018Runs.json  json_TRK_PromptReco_314324to316201.json  json_allRunsRefRuns.json  json_pixel_bad_201201.json  json_pixel_good_201201.json
notebooks/: CertHelperData.ipynb  RRR.ipynb  RRR_dev.ipynb  RefRunRank.ipynb  RunRegistryData.ipynb  dataexploration.ipynb
scripts/: getCHjson.py  getRRjson.py  setup.sh
src/refrunrank/: __init__.py  certhelper.py  omsdata.py  omsftrs.py  rank_utils.py  ranking.py  rrrtests.py
src/refrunrank/utils/: __init__.py  compute.py  data_utils.py  json_utils.py  refruns_utils.py
src/scripts/: rrr.py
utils/: OMS_RR_utils.py  compute.py  json_utils.py  oms_downloader.py  oms_utils.py  rank_utils.py  refrank_utils.py  refruns_utils.py  rrrtests.py
