[tool.poetry]
name = "refrunrank"
description = "Tools for the automated selection of reference runs"
readme = "README.md"
authors = [
    {name = "Roy Cruz", email = "roy.cruz.candelaria@cern.ch"}
    {name = "Guillermo Fidalgo", email = "guillermo.fidalgo@upr.edu"}
]
repository = "https://github.com/CMSTrackerDPG/ReferenceRunRank"
packages = [{ include = "refrunrank", from = "src" }]

[tool.poetry.dependency]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.3"
cmsdials = "^1.4.0"
dqmexplore = { git = "https://github.com/CMSTrackerDPG/DQMExplore.git" }
ipykernel = { version = "^6.29.4", optional = true }
ipywidgets = { version = "^8.1.2", optional = true }
nbformat = { version = "^5.10.4", optional = true }

[tool.poetry.extras]
nb = [
    "ipykernel",
    "ipywidgets",
    "nbformat",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
