[project]
name = "refrunrank"
version = "0.2.0"
description = "Tools for the automated selection of reference runs"
authors = [
    {name = "Roy Cruz", email = "roy.cruz.candelaria@cern.ch"},
    {name = "Guillermo Fidalgo", email = "guillermo.fidalgo@upr.edu"},
]
readme = "README.md"
repository = "https://github.com/CMSTrackerDPG/ReferenceRunRank"
packages = [
    { include = "refrunrank" }
]
package-dir = {"" = "src"}
requires-python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
notebook = "^7.1.3"

[tool.poetry.dependencies]
cmsdials = {extras = ["pandas", "tqdm"], version = "^1.5.0"}
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
runregistry = "^3.0.0"
plotly = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
