[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "refrunrank"
version = "1.0.0"
description = "Tools for the automated selection of reference runs"
authors = [
    {name = "Roy Cruz", email = "roy.cruz.candelaria@cern.ch"},
    {name = "Guillermo Fidalgo", email = "guillermo.fidalgo@upr.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "cmsdials[pandas,tqdm]>=1.5.0",
    "dqmexplore@git+https://github.com/CMSTrackerDPG/DQMExplore.git",
    "scikit-learn>=1.6.1",
]

[project.urls]
Repository = "https://github.com/CMSTrackerDPG/ReferenceRunRank"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.2",
]
nb = [
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "seaborn>=0.13.2",
    "mplhep>=0.3.59"
]

[project.scripts]
rrr = "scripts.rrr:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
